--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/a.out",
-            "args": ["150", "3156", "3164", "2363", "4325", "4380", "428", "1360", "3370", "88", "4194", "4999", "1821", "2559", "117", "3907", "4856", "271", "4096", "1343", "919", "4288", "503", "290", "3067", "4332", "2900", "2905", "1037", "78", "4038", "140", "4504", "4597", "1284", "3548", "3630", "1992", "4911", "1957", "2309", "4005", "705", "1468", "4521", "1052", "885", "4866", "3559", "3434", "2470", "4018", "676", "3481", "3301", "4898", "2695", "2519", "4148", "520", "3320", "2678", "3168", "855", "4907", "3430", "2991", "1481", "2713", "9", "4391", "2535", "3177", "4315", "4871", "2202", "3460", "238", "1578", "3113", "1225", "4869", "151", "2530", "4338", "673", "2226", "502", "3096", "385", "2676", "1255", "956", "3919", "3165", "393", "650", "4337", "1642", "2844"],
+            "program": "${workspaceFolder}/amine",
+            "args": ["1", "0", "3", "5", "18", "12", "19", "8", "13", "2", "14", "16", "7", "9", "17", "10", "6", "11", "15", "4"],
             "cwd": "${workspaceFolder}"
         }
     ]
