--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "request": "launch",
             "name": "Debug",
             "program": "${workspaceFolder}/amine",
-            "args": ["1", "0", "3", "5", "18", "12", "19", "8", "13", "2", "14", "16", "7", "9", "17", "10", "6", "11", "15", "4"],
+            "args": ["54", "74" ,"50", "18", "33" ,"47", "80", "91", "78", "86", "94", "68", "61", "16", "11", "12", "70", "3", "57", "5", "31", "1", "69", "17", "66", "45", "7", "24", "30", "63", "90", "10", "55", "58", "4", "42", "82", "73", "99"
+            ],
             "cwd": "${workspaceFolder}"
         }
     ]
